ready for hosting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,11 +67,11 @@
     <br><br>
     <div class="row">
         <div class="col-5">
-            <div class="rounded border left-div p-5 border-3 border-black text-center">Information</div>
+            <div class="rounded border left-div p-5 border-3 border-black text-center">Completed By : Ravi Ranjan Kumar</div>
         </div>
         <div class="col-2"></div>
         <div class="col-5">
-            <div class="rounded border right-div p-5 border-3 border-black text-center">Information</div>
+            <div class="rounded border right-div p-5 border-3 border-black text-center">This is the first Assignment during traing bootacamp</div>
         </div>
     </div>
 </body>
